fixed gap between pic and aboutus

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -28,7 +28,8 @@ nav {
 }
 .container1{
   width: 100%;
-  height: 150%;
+  height: 100%;
+  margin-bottom: -21px;
 }
 
 @media (max-width: 750px) {
